Fix a bug with .ql-mention-list-item
Added CSS to show ellipsis when the text is too long in .ql-mention-list-item. This fixes the UI bug that would show the overflowing text in the next .ql-mention-list-item

--- a/src/quill.mention.css
+++ b/src/quill.mention.css
@@ -28,6 +28,9 @@
   font-size: 16px;
   padding: 0 20px;
   vertical-align: middle;
+  overflow: hidden;
+  white-space:nowrap;
+  text-overflow: ellipsis;
 }
 
 .ql-mention-list-item.disabled {
